@@ -22,6 +22,10 @@ PHP                                                                        NEWS
   . Fixed bug #69831 (Segmentation fault in curl_getinfo). (im dot denisenko at
     yahoo dot com)
 
+- Opcache:
+  . Removed opcache.load_comments configuration directive. Now doc comments
+    loading costs nothing and always enabled. (Dmitry)
+
 - PDO_pgsql:
   . Fixed bug #69752 (PDOStatement::execute() leaks memory with DML
     Statements when closeCuror() is u). (Philip Hofstetter)
